Request: Add some clean way to scope variable names
Commonly CMake Scripts will leave alot of variable names in the global scope, cleaning them up is tiresome and errorprone.
One way to deal with this is to instead create a function
, export only the required variables to the parent scope and call it. That then leaves the function name in global scope...
Some scope()
/endscope
functionality that does the same, but does not leave a function name would be ideal. Perhabs a new keyword could be avoided by using a function()
without a name/arguments for this functionality.