Tests/RunCMake/block/EndAloneWithArgument.cmake
@@ -1,0 +1,1 @@
+endblock(WRONG_ARG)
