Tests/RunCMake/block/WrongArgument.cmake
@@ -1,0 +1,2 @@
+block(WRONG_ARG)
+endblock()
