Tests/RunCMake/block/WrongScope.cmake
@@ -1,0 +1,2 @@
+block(SCOPE_FOR WRONG_SCOPE)
+endblock()
